add_library(
  nano_store
  component.hpp
  lmdb/account.hpp
  lmdb/block.hpp
  lmdb/confirmation_height.hpp
  lmdb/final_vote.hpp
  lmdb/frontier.hpp
  lmdb/lmdb.hpp
  lmdb/lmdb_env.hpp
  lmdb/iterator.hpp
  lmdb/transaction_impl.hpp
  lmdb/online_weight.hpp
  lmdb/peer.hpp
  lmdb/pending.hpp
  lmdb/pruned.hpp
  lmdb/transaction_impl.hpp
  lmdb/version.hpp
  lmdb/wallet_value.hpp
  component.cpp
  lmdb/account.cpp
  lmdb/block.cpp
  lmdb/confirmation_height.cpp
  lmdb/final_vote.cpp
  lmdb/frontier.cpp
  lmdb/lmdb.cpp
  lmdb/lmdb_env.cpp
  lmdb/transaction.cpp
  lmdb/online_weight.cpp
  lmdb/peer.cpp
  lmdb/pending.cpp
  lmdb/pruned.cpp
  lmdb/version.cpp
  lmdb/wallet_value.cpp)

target_link_libraries(
  nano_store
  Boost::circular_buffer
  Boost::endian
  Boost::filesystem
  Boost::iostreams
  Boost::log_setup
  Boost::log
  Boost::multiprecision
  Boost::pool
  Boost::stacktrace
  Boost::variant)
