add_library(
  nano_store
  account.hpp
  block.hpp
  component.hpp
  confirmation_height.hpp
  db_val.hpp
  db_val_impl.hpp
  iterator.hpp
  iterator_impl.hpp
  final.hpp
  lmdb/account.hpp
  lmdb/block.hpp
  lmdb/confirmation_height.hpp
  lmdb/db_val.hpp
  lmdb/final_vote.hpp
  lmdb/iterator.hpp
  lmdb/lmdb.hpp
  lmdb/lmdb_env.hpp
  lmdb/iterator.hpp
  lmdb/transaction_impl.hpp
  lmdb/online_weight.hpp
  lmdb/peer.hpp
  lmdb/pending.hpp
  lmdb/pruned.hpp
  lmdb/transaction_impl.hpp
  lmdb/version.hpp
  lmdb/wallet_value.hpp
  online_weight.hpp
  peer.hpp
  pending.hpp
  pruned.hpp
  tables.hpp
  transaction.hpp
  version.hpp
  account.cpp
  block.cpp
  component.cpp
  confirmation_height.cpp
  db_val.cpp
  iterator.cpp
  iterator_impl.cpp
  final.cpp
  lmdb/account.cpp
  lmdb/block.cpp
  lmdb/confirmation_height.cpp
  lmdb/db_val.cpp
  lmdb/final_vote.cpp
  lmdb/lmdb.cpp
  lmdb/lmdb_env.cpp
  lmdb/transaction.cpp
  lmdb/online_weight.cpp
  lmdb/peer.cpp
  lmdb/pending.cpp
  lmdb/pruned.cpp
  lmdb/version.cpp
  lmdb/wallet_value.cpp
  online_weight.cpp
  peer.cpp
  pending.cpp
  pruned.cpp
  version.cpp)

target_link_libraries(
  nano_store
  nano_lib
  Boost::circular_buffer
  Boost::endian
  Boost::iostreams
  Boost::multiprecision
  Boost::pool
  Boost::stacktrace
  Boost::variant)
