[package]
name = "rsnano_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
primitive-types = "0"
hex = "0"
blake2 = "0.10"
rand = {version="0" }
ctr = "0"
aes = "0"
ed25519-dalek-blake2b = "1"
once_cell = "1"
num = "0"
num-traits = "0"
num-format = "0"
num-derive = "0"
static_assertions = "1"
rust-argon2 = "1"
serde_json = "1.0.64"