[package]
name = "rsnano_ffi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmdb-rkv = "0.14"
rsnano_core = { path = "../core" }
rsnano_messages = { path = "../messages" }
rsnano_store_lmdb = { path = "../store_lmdb" }
rsnano_ledger = { path = "../ledger" }
rsnano_node = { path = "../node" }
anyhow = "1"
num = "0"
num-traits = "0"
num-derive = "0"
rand = "0"
bounded-vec-deque = "0.1.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
toml = "0.8.15"

[build-dependencies]
cbindgen = "0.24.3"
