[package]
name = "rsnano_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsnano_core = { path = "../core" }
anyhow = "1"
once_cell = "1"
num-traits = "0"
num-derive = "0"
rsnano_store_traits = { path = "../store_traits" }
rand = {version="0" }

[dev-dependencies]
rsnano_store_lmdb = { path = "../store_lmdb" }