[package]
name = "load_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
rand = "0.8.4"
reqwest = { version = "0.11.7", features = ["json"]}
rsnano = { path = "../rsnano" }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"]}
