[package]
name = "rsnano_node_main"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2021"

[[bin]]
name = "rsnano_node"
path = "src/bin.rs"

[dependencies]
rsnano_core = { path = "../core" }
rsnano_messages = { path = "../messages" }
rsnano_store_lmdb = { path = "../store_lmdb" }
rsnano_node = { path = "../node" }
rsnano_ledger = { path = "../ledger" }
rsnano_rpc_server = { path = "../rpc_server" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
ctrlc = "3.4.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.40"
rand = { version = "0.8.4" }
toml = "0.8.15"
tokio = "1"

[dev-dependencies]
assert_cmd = "2.0.14"
