[package]
name = "rsnano_node_main"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2021"

[[bin]]
name = "rsnano_node"
path = "src/bin.rs"

[dependencies]
rsnano_core = { path = "../core" }
rsnano_messages = { path = "../messages" }
rsnano_store_lmdb = { path = "../store_lmdb" }
rsnano_node = { path = "../node" }
rsnano_ledger = { path = "../ledger" }
rsnano_rpc_server = { path = "../rpc_server" }
rsnano_daemon = { path = "../daemon" }
rsnano_nullable_console = { path = "../nullables/console" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.40"
rand = { version = "0.8.4" }
tokio = { version = "1", features = ["signal"] }
toml = "0.8.15"

[dev-dependencies]
assert_cmd = "2.0.14"
