[package]
name = "rsnano_network"
version = "0.1.0"
edition = "2021"

[dependencies]
rsnano_nullable_clock = { path = "../nullables/clock" }
rsnano_core = { path = "../core" }
num-traits = "0"
num-derive = "0"
rand = { version = "0" }
tracing = "0.1"
anyhow = "1"
tokio = { version = "1", features = [
    "net",
] }
