[package]
name = "rsnano_node"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2021"

[features]
output_tracking = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rsnano_node = { path = ".", features = ["output_tracking"] }
mock_instant = "0.2.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.5"
tracing-test = "0.2.4"

[dependencies]
rsnano_core = { path = "../core" }
rsnano_messages = { path = "../messages" }
rsnano_store_lmdb = { path = "../store_lmdb" }
lmdb-rkv = "0.14"
rsnano_ledger = { path = "../ledger" }
anyhow = "1.0.40"
bitvec = "1.0.0"
blake2 = "0.10.5"
bounded-vec-deque = "0.1.1"
chrono = "0.4.19"
dirs = "4.0.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.7.2"
rand = { version = "0.8.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
siphasher = "0.3.10"
static_assertions = "1.1.0"
toml_edit = "0.15.0"
uuid = { version = "1.2.2", features = ["v4"] }
scoped_threadpool = "0.1.*"
backtrace = "0.3"
serde_variant = "0.1.1"
primitive-types = "0"
threadpool = "1"
timer = "0"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
async-trait = "0"
tracing = "0.1"
ordered-float = "4.2.0"
tokio-tungstenite = "0.21.0"
futures-util = { version = "0.3.30", features = ["sink"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
tokio-util = "0.7.11"
toml = "0.8.15"
strum = "0"
strum_macros = "0"
