[package]
name = "rsnano_node"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2021"

[features]
output_tracking = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mock_instant = "0.2.1"
tracing-test = "0.2.4"
test_helpers = { path = "../tools/test_helpers" }

[dependencies]
rsnano_core = { path = "../core" }
rsnano_messages = { path = "../messages" }
rsnano_network = { path = "../network" }
rsnano_store_lmdb = { path = "../store_lmdb" }
rsnano_output_tracker = { path = "../nullables/output_tracker" }
rsnano_nullable_fs = { path = "../nullables/fs" }
rsnano_nullable_tcp = { path = "../nullables/tcp" }
rsnano_nullable_lmdb = { path = "../nullables/lmdb" }
rsnano_nullable_http_client = { path = "../nullables/http_client" }
rsnano_nullable_clock = { path = "../nullables/clock" }
rsnano_ledger = { path = "../ledger" }
anyhow = "1"
bitvec = "1"
blake2 = "0"
bounded-vec-deque = "0.1.1"
chrono = "0.4.19"
dirs = "4.0.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.7.2"
rand = { version = "0.8.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
siphasher = "0.3.10"
static_assertions = "1.1.0"
toml_edit = "0.15.0"
uuid = { version = "1.2.2", features = ["v4"] }
scoped_threadpool = "0.1.*"
backtrace = "0.3"
serde_variant = "0.1.1"
primitive-types = "0"
threadpool = "1"
timer = "0"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
async-trait = "0"
tracing = "0.1"
ordered-float = "4.2.0"
tokio-tungstenite = "0.21.0"
futures-util = { version = "0.3.30", features = ["sink"] }
tokio-util = "0"
toml = "0"
strum = "0"
strum_macros = "0"
