[package]
name = "rsnano_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net"] }
anyhow = "1.0.40"
rsnano_node = { path = "../node" }
axum = "0.7.5"
rsnano_core = { path = "../core" }
toml = "0.8.15"
