[package]
name = "rsnano_rpc_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rsnano_core = { path = "../core" }
rsnano_rpc_messages = { path = "../rpc_messages" }
anyhow = "1"
reqwest = { version = "0", default-features = false, features = ["json"]}
serde = { version = "1" }
serde_json = { version = "1", features = ["preserve_order"] }
