[package]
name = "rsnano_rpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rsnano_core = { path = "../core" }
rsnano_messages = { path = "../messages" }
rsnano_network = { path = "../network" }
rsnano_node = { path = "../node" }
rsnano_ledger = { path = "../ledger" }
rsnano_rpc_client = { path = "../rpc_client" }
rsnano_nullable_clock = { path = "../nullables/clock" }
rsnano_rpc_messages = { path = "../rpc_messages" }
rsnano_store_lmdb = { path = "../store_lmdb" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net"] }
anyhow = "1.0.40"
axum = "0.7.5"
toml = "0.8.15"
tracing = "0.1"

[dev-dependencies]
test_helpers = { path = "../tools/test_helpers" }
