[package]
name = "rsnano"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dev-dependencies]
mock_instant = "0.2.1"

[dependencies]
anyhow = "1.0.40"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
static_assertions = "1.1.0"
