[package]
name = "rsnano"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]

[dev-dependencies]
mock_instant = "0.2.1"

[dependencies]
anyhow = "1.0.40"
blake2 = "0.9.1"
chrono = "0.4.19"
ed25519-dalek-blake2b = "1.0.2"
hex = "0.4.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.7.2"
primitive-types = "0.10.1"
rand = {version="0.8.4" }
serde_json = "1.0.64"
static_assertions = "1.1.0"
toml_edit = "0.10.0"
