[package]
name = "rsnano"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]

[dev-dependencies]
mock_instant = "0.2.1"

[dependencies]
anyhow = "1.0.40"
bitvec = "1.0.0"
blake2 = "0.9.1"
bounded-vec-deque = "0.1.1"
chrono = "0.4.19"
dirs = "4.0.0"
ed25519-dalek-blake2b = "1.0.2"
hex = "0.4.3"
indexmap = "1.8.1"
num = "0.4.0"
num-derive = "0.3.3"
num-format = "0.4.0"
num-traits = "0.2.14"
once_cell = "1.7.2"
primitive-types = "0.10.1"
rand = {version="0.8.4" }
serde_json = "1.0.64"
siphasher = "0.3.10"
static_assertions = "1.1.0"
toml_edit = "0.10.0"
uuid = { version = "0.8.2", features = ["v4"] }
scoped_threadpool = "0.1.*"
backtrace = "0.3"
